@@ -1,3 +1,8 @@
+2004-11-15  Paul Brook  <paul@codesourcery.com>
+
+	* elflink.c (elf_link_add_object_symbols): Don't assume version
+	indices are consecutive.
+
 2004-11-14  Richard Sandiford  <rsandifo@redhat.com>
 
 	* elf-eh-frame.c (_bfd_elf_discard_section_eh_frame): Deal with
